[gd_scene load_steps=13 format=3 uid="uid://c1w2s46y4dr52"]

[ext_resource type="Texture2D" uid="uid://b2dbggg5g8f8s" path="res://Textures/Cainos Tile Sheets/TX Shadow.png" id="1_4nswu"]
[ext_resource type="Script" path="res://Scenes/Props/Statue/statue.gd" id="1_k1waj"]
[ext_resource type="Texture2D" uid="uid://24l8qr1pdy5q" path="res://Textures/Cainos Tile Sheets/TX Props.png" id="2_6qdwt"]
[ext_resource type="AudioStream" uid="uid://cdd6ku6kmjq8v" path="res://Audio/Notes/A4_ooh_loop.wav" id="4_ftocm"]
[ext_resource type="AudioStream" uid="uid://cwrudms34iprv" path="res://Audio/Notes/B4_ooh_loop.wav" id="5_vn5oc"]
[ext_resource type="AudioStream" uid="uid://c3k7wug151a3j" path="res://Audio/Notes/C4_ooh_loop.wav" id="6_numxx"]
[ext_resource type="AudioStream" uid="uid://dh7os5c7hqvtf" path="res://Audio/Notes/D4_ooh_loop.wav" id="7_oqfst"]
[ext_resource type="AudioStream" uid="uid://c43obs6nnqljk" path="res://Audio/Notes/E4_ooh_loop.wav" id="8_vk0qd"]
[ext_resource type="AudioStream" uid="uid://be6afud1cp8r5" path="res://Audio/Notes/F4_ooh_loop.wav" id="9_okym4"]
[ext_resource type="AudioStream" uid="uid://dwtfpsgbpr3wl" path="res://Audio/Notes/G4_ooh_loop.wav" id="10_m5vpl"]
[ext_resource type="AudioStream" uid="uid://7fpx54bxdrlm" path="res://Audio/Notes/A5_ooh_loop.wav" id="11_0p1bk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82idf"]
size = Vector2(36, 19)

[node name="Statue" type="Node2D"]
script = ExtResource("1_k1waj")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.572549)
texture = ExtResource("1_4nswu")
offset = Vector2(2, -20)
region_enabled = true
region_rect = Rect2(446, 54, 37, 39)

[node name="Structure" type="Sprite2D" parent="."]
texture = ExtResource("2_6qdwt")
offset = Vector2(0, -36)
region_enabled = true
region_rect = Rect2(445, 21, 37, 72)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_82idf")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="NoteHandler" type="Node2D" parent="."]

[node name="Note" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("4_ftocm")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[node name="Note2" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("5_vn5oc")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[node name="Note3" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("6_numxx")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[node name="Note4" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("7_oqfst")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[node name="Note5" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("8_vk0qd")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[node name="Note6" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("9_okym4")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[node name="Note7" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("10_m5vpl")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[node name="Note8" type="AudioStreamPlayer2D" parent="NoteHandler"]
stream = ExtResource("11_0p1bk")
volume_db = -10.0
max_distance = 500.0
attenuation = 6.49803
bus = &"Statue"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
